Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -358,7 +358,8 @@ In the space-based challenge, it is not possible to separate lens and source bas
 
 In the full version of YattaLens, a lens modeling step is performed to improve the purity of the sample. However, such a procedure is too time consuming and was not performed in this challenge.
 
-\subsection{Trained Logistic Regression Methods}
+\subsection{Trained Logistic Regression Methods }
+\red{PH: I don't think the SVM can be classed as logistic regression since it is not a probabilistic method of getting the hyperplane - could we use 'two-step methods' or 'feature-selecting ML methods' or similar, to class these methods as ones which do not learn the feature set by themselves?}
 
 \subsubsection{Gabor-SVM (Hartley, Flamary)}
 
