--- a/references.bib
+++ b/references.bib
@@ -1609,3 +1609,18 @@ archivePrefix = "arXiv",
   year={2014},
   publisher={PeerJ Inc.}
 }
+
+@ARTICLE{1996ApJ...462..563N,
+   author = {{Navarro}, J.~F. and {Frenk}, C.~S. and {White}, S.~D.~M.},
+    title = "{The Structure of Cold Dark Matter Halos}",
+  journal = {\apj},
+   eprint = {arXiv:astro-ph/9508025},
+ keywords = {COSMOLOGY: THEORY, COSMOLOGY: DARK MATTER, GALAXIES: HALOS, METHODS: NUMERICAL},
+     year = 1996,
+    month = may,
+   volume = 462,
+    pages = {563},
+      doi = {10.1086/177173},
+   adsurl = {http://adsabs.harvard.edu/abs/1996ApJ...462..563N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
