Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -430,7 +430,7 @@ and and 20\% test to avoid overfitting the data.  We use the best
 parameters to then train the entire dataset for the final model
 classifier that we used to evaluate the competition data.
 
-\subsection{Convolutional Neural Networks ((Lanusse)}
+\subsection{Convolutional Neural Networks}
 Since Convolutional Neural Networks (CNNs) are central to many of the methods that will be described later a brief general description of them will be useful.
 A CNN \citep{Lecun1998} is a multi-layer feed-forward neural network model particularly well suited for processing natural images. With the very recent advances of the \textit{Deep Learning} framework \citep{Lecun2015}, models based on CNN architectures have reached or even surpassed human accuracy in image classification tasks \citep{He2015a}.
 
