Added description of activation functions

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,21 @@
+@article{Nair2010,
+abstract = {Restricted Boltzmann machines were developed using binary stochastic hidden units. These can be generalized by replacing each binary unit by an inﬁnite number of copies that all have the same weights but have progressively more negative biases. The learning and inference rules for these “Stepped Sigmoid Units” are unchanged. They can be approximated eﬃciently by noisy, rectiﬁed linear units. Compared with binary units, these units learn features that are better for object recognition on the NORB dataset and face veriﬁcation on the Labeled Faces in the Wild dataset. Unlike binary units, rectiﬁed linear units preserve information about relative intensities as information travels through multiple layers of feature detectors.},
+archivePrefix = {arXiv},
+arxivId = {1111.6189v1},
+author = {Nair, Vinod and Hinton, Geoffrey E},
+doi = {10.1.1.165.6419},
+eprint = {1111.6189v1},
+file = {:home/francois/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Nair, Hinton - 2010 - Rectified Linear Units Improve Restricted Boltzmann Machines.pdf:pdf},
+isbn = {9781605589077},
+issn = {1935-8237},
+journal = {Proceedings of the 27th International Conference on Machine Learning},
+number = {3},
+pages = {807--814},
+pmid = {22404682},
+title = {{Rectified Linear Units Improve Restricted Boltzmann Machines}},
+year = {2010}
+}
+
 @article{LeCun2015,
 abstract = {Deep learning allows computational models that are composed of multiple processing layers to learn representations of data with multiple levels of abstraction. These methods have dramatically improved the state-of-the-art in speech recognition, visual object recognition, object detection and many other domains such as drug discovery and genomics. Deep learning discovers intricate structure in large data sets by using the backpropagation algorithm to indicate how a machine should change its internal parameters that are used to compute the representation in each layer from the representation in the previous layer. Deep convolutional nets have brought about breakthroughs in processing images, video, speech and audio, whereas recurrent nets have shone light on sequential data such as text and speech.},
 annote = {NULL},
